# geo2db

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  project-architecture.html
.claude/: settings.local.json
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: db_commands.rs  file_commands.rs  import_commands.rs  mod.rs
src-tauri/src/database/: dameng.rs  mod.rs  postgres.rs  traits.rs
src-tauri/src/database/dialects/: dameng.rs  mod.rs  postgres.rs
src-tauri/src/gdal/: mod.rs
src-tauri/src/models/: mod.rs
src/components/: DbConfig.tsx  DbConfigList.tsx  FileSelector.tsx  Header.tsx  ImportConfig.tsx  Progress.tsx
src/hooks/: useImport.ts
src/types/: index.ts
